1.2.9
- Fixed a bug that prevented the generation of TableAdapters due to a null reference exception
  (MySql bug #90390, Oracle bug #27857627).


1.2.8
- Added support for MySQL 8 server features.
- Fixed a bug in which the installation would roll back when Visual Studio 2017 failed to execute devenv commands. This is a
  known issue in Windows 7 environments caused by faulty user permissions. The installer was modified to display a warning
  message in such cases with instructions on how to proceed (MySql Bug #87902, Oracle bug Bug #27365261).
- Fixed a bug that prevented the MySql.Web assembly from being loaded when using the MySQL Website Configuration Tool
  due to an incorrect way of identifying the version of the assembly (MySql Bug #89446, Oracle bug Bug #27450530).
- Fixed a bug in which the "Alter Routine" option failed to retrieve the definition of a Store Procedure (Oracle bug Bug #27669339).
- Upgraded MySQL for Visual Studio to require .NET 4.5.2 or greater when installed.


1.2.7
- Added support for VS2017.
- Remove support for VS2010.
- Fixed a problem which prevented MySQL scripts from detecting keyboard input for keys such as Enter,
  Backspace, Arrows, etc. This would only happen after saving the script for the first time.
  (Bug #25713638 - SCRIPT CAN'T GET EDITED AFTER SAVING IT).
- Fixed bug which caused the currently selected schema's db objects to become unselected in the Tree view after unselecting
  a different schema from the Schema list. (Bug #25713981 - EXPORT TOOL IS EXPORTING THE WRONG SCHEMA)


1.2.6
- Fix a bug which prevent users to create a non MySql connection in the Server Explorer pane in VisualStudio 
  after the user create a MySql Connection checking the option "Always use this selection" when selecting 
  the Data Source and Data Provider (MySql Bug #77441, Oracle bug #22122881)
- Fixed the bug that was preventing to "Generate Database from Model" in an existing "edmx" model,