@@ -1,6 +1,8 @@
 1.2.9
-- Fixed a bug that prevented the generation of TableAdapters due to a null reference exception
+- Fixed a bug that prevented the generation of table adapters due to a null reference exception
   (MySql bug #90390, Oracle bug #27857627).
+- Fixed a bug that prevented the creation of data sources due to a failure during the generation of a connection object
+  when MySQL Connector/NET 6.10.9+ is installed (MySql bug #91136, Oracle bug #28148998).
 
 
 1.2.8
